--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongoose": "^8.1.3"
+    "@deepgram/sdk": "^3.1.9",
+    "dotenv": "^16.4.4",
+    "ffmpeg-static": "^5.2.0",
+    "fs": "^0.0.1-security",
+    "mongoose": "^8.1.3",
+    "youtube-mp3-downloader": "^0.7.11"
   }
 }
