--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "@deepgram/sdk": "^3.1.9",
+    "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.18.2",
     "ffmpeg-static": "^5.2.0",
     "fs": "^0.0.1-security",
+    "nodemon": "^3.0.3",
     "youtube-mp3-downloader": "^0.7.11"
   }
 }
